# chatterbox

./: MPS improvements notes.md  README.md  benchmark_mps.py  benchmark_multilingual.py  pyproject.toml
.github/workflows/: ci.yml
benchmark_multilingual_output/: multilingual_results.json
benchmark_output/: benchmark_results.json
src/chatterbox/: __init__.py  cli.py  generation_utils.py  mtl_tts_mlx.py  text_sanitizer.py  tts.py  tts_turbo.py  tts_turbo_mlx.py
src/chatterbox/models/s3gen/: flow.py  flow_matching.py  s3gen.py
src/chatterbox/models/s3gen_mlx/: flow_matching_mlx.py
src/chatterbox/models/s3gen_mlx/matcha/: transformer_mlx.py
src/chatterbox/models/s3gen_mlx/transformer/: attention_mlx.py
src/chatterbox/models/t3/: llama_configs.py  t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend.py
src/chatterbox/models/t3/modules/: t3_config.py
src/chatterbox/models/t3_mlx/: t3_mlx.py
src/chatterbox/models/t3_mlx/inference/: alignment_stream_analyzer_mlx.py  sampling_utils_mlx.py  t3_mlx_backend.py
src/chatterbox/models/t3_mlx/modules/: llama_mlx.py
