[project]
name = "chatterbox-mlx"
version = "0.1.5"
description = "Chatterbox MLX: Open Source TTS for MLX, based off of Chatterbox by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "michael-yang", email = "admin@cl6holdings.com"}
]
keywords = ["tts", "text-to-speech", "voice-cloning", "speech-synthesis", "ai", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==2.3.5",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec==0.7.0",
    "transformers==4.57.3",
    "diffusers==0.35.2",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors>=0.7.0",
    "spacy>=3.8.3",
    "spacy-pkuseg==1.0.1",
    "pykakasi==2.3.0",
    "pyloudnorm>=0.1.0",
    "russian-text-stresser@git+https://github.com/michaelcreatesstuff/add-stress-to-epub.git@60c5c3d31cd5472e394d64cf74d6f1d7b31425e2",

]

[project.optional-dependencies]
mlx = [
    "mlx>=0.30.0",
    "mlx-lm>=0.28.3",
]

[project.urls]
Homepage = "https://github.com/michaelcreatesstuff/chatterbox"
Repository = "https://github.com/michaelcreatesstuff/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
